# evolution-of-todo

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  HACKATHON_ANALYSIS.md  Hackathon-II.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.claude/agents/: README.md  betterauth-engineer.md  chatkit-backend-engineer.md  chatkit-frontend-engineer.md  database-expert.md  fastapi-pro.md  fullstack-engineer.md  gemini-integration.md  huggingface-deployment.md  kubernetes-architect.md  monorepo-architect.md  nextjs-engineer.md  performance-optimization.md  playwright-automation-engineer.md  prompt-engineer.md  security-specialist.md  testing-qa-specialist.md  ui-ux-designer.md  voice-task.md  (+1 more)
.gemini/: settings.json
Phase-1-Console-App/: README.md  pyproject.toml
Phase-1-Console-App/config/: README.md  gemini-mcp.json  gemini-settings.json
Phase-1-Console-App/history/prompts/001-phase-i-complete/: 0001-complete-phase-i-enhanced-spec.spec.prompt.md  0002-phase-i-spec-clarifications.spec.prompt.md  0003-phase-i-complete-planning.plan.prompt.md  0004-phase-i-task-breakdown.tasks.prompt.md  0005-implemented-phase-i-setup-and-us1.green.prompt.md
Phase-1-Console-App/src/cli/: commands.py  input_validators.py  main.py  menu.py
Phase-1-Console-App/src/models/: priority.py  recurrence.py  task.py
Phase-1-Console-App/src/services/: email_service.py  notification_service.py  todo_list.py
Phase-1-Console-App/tests/integration/: test_advanced_features.py  test_cli_flow.py  test_cli_priority_tags.py
Phase-1-Console-App/tests/unit/: test_cli_core.py  test_email_service.py  test_models.py  test_notifications.py  test_todo_service.py
Phase-II-fullstack-web-app/: DEPLOYMENT.md  deploy.sh  vercel.json
Phase-II-fullstack-web-app/backend/: .env.example  .gitignore  CLAUDE.md  coverage.json  pyproject.toml  pytest.ini  railway.json  test_env.py  test_runner.py
Phase-II-fullstack-web-app/backend/alembic/versions/: 001_create_conversations_and_messages.py
Phase-II-fullstack-web-app/backend/scripts/: seed.py
Phase-II-fullstack-web-app/backend/src/: __init__.py  config.py  database.py  main.py  security.py
Phase-II-fullstack-web-app/backend/src/agent/: __init__.py  orchestrator.py
Phase-II-fullstack-web-app/backend/src/api/: __init__.py  deps.py
Phase-II-fullstack-web-app/backend/src/api/routes/: __init__.py  auth.py  chat.py  health.py  tasks.py
Phase-II-fullstack-web-app/backend/src/mcp/: __init__.py  tools.py
Phase-II-fullstack-web-app/backend/src/middleware/: __init__.py  auth.py
Phase-II-fullstack-web-app/backend/src/models/: __init__.py  conversation.py  message.py  task_tag.py  user.py
Phase-II-fullstack-web-app/backend/src/schemas/: tag.py  task.py
Phase-II-fullstack-web-app/backend/src/services/: conversation_service.py
Phase-II-fullstack-web-app/backend/tests/: conftest.py  test_auth.py  test_authentication.py  test_validation.py
Phase-II-fullstack-web-app/backend/tests/api/: test_chat.py
Phase-II-fullstack-web-app/backend/tests/integration/: test_agent_workflows.py
backend/: .env.example  .env.production  .gitignore  alembic.ini  coverage.json  pyproject.toml  run_tests.sh
docs/: gemini-integration.md
frontend/: .env.local.example  .gitignore  CLAUDE.md  build_log.txt  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
src/: main.py
(+735 files in other folders)
